# fall_detection_ui

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/fall_detection_ui/: app.py  login.py  register.py  video_test.py
src/fall_detection_ui/developer/: conv2d_lstm.py
src/fall_detection_ui/model/: FallDetection.py
src/fall_detection_ui/user/: real_time.py  video_demo.py
src/fall_detection_ui/utils/: FrameFetcher.py  turn.py  video_utils.py
src/utils/: turn.py
