[tool.poetry]
name = "fall-detection-ui"
version = "0.1.0"
description = ""
authors = ["Vincent Jia <vincejia@gmail.com>"]
readme = "README.md"
packages = [{include = "fall_detection_ui", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.38.0"
streamlit-webrtc = "^0.47.7"
opencv-python-headless = "^4.10.0.84"
twilio = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
